[package]
name = "driver"
version = "0.1.0"
authors = ["not-matthias <26800596+not-matthias@users.noreply.github.com>"]
edition = "2018"
build = "build.rs"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies.winapi]
git = "https://github.com/yious/winapi-rs.git"
branch = "feature/km"
features = [
    "wdm",
    "ntstatus",
    "ntdef"
]

[dependencies.win-kmd-alloc]
git = "https://github.com/woodgear/win-kmd-alloc.git"
branch = "feature/km"

[dependencies]
obfstr = "0.1.1"

[build-dependencies]
winreg = "0.7.0"
failure = "0.1.8"